fixed cors by inserting the correct bean